# dxx

./: .gitignore  CHANGELOG.txt  INSTALL.txt  README.txt  SConstruct  d2x.ini  meson.build
2d/: 2dsline.c  bitblt.c  bitmap.c  box.c  canvas.c  clip.h  font.c  gpixel.c  line.c  palette.c  pcx.c  pixel.c  rect.c  rle.c  scalec.c
3d/: draw.c  globvars.c  globvars.h  interp.c  matrix.c  points.c  rod.c  setup.c
arch/carbon/: conf.h
arch/include/: event.h  joy.h  key.h  mouse.h  window.h
arch/linux/: hmiplay.c
arch/ogl/: gr.c  ogl.c
arch/sdl/: digi.c  digi_audio.c  digi_mixer.c  digi_mixer_music.c  event.c  gr.c  init.c  joy.c  jukebox.c  key.c  mouse.c  rbaudio.c  timer.c  window.c
d2x-rebirth.xcodeproj/: project.pbxproj
debian/: rules
editor/: autosave.c  centers.c  eobject.c  fixseg.c  func.c  group.c  info.c  kmine.c  ksegsize.c  med.c  meddraw.c  medmisc.c  medrobot.c  medwall.c  mine.c  objpage.c  segment.c  seguvs.c  texture.c
iff/: iff.c
include/: 3d.h  args.h  bitarray.h  byteswap.h  cfile.h  console.h  d_glob.h  d_io.h  dxxerror.h  error.h  gr.h  grdef.h  hmp.h  hmp2mid.h  iff.h  internal.h  interp.h  libmve.h  maths.h  nocfile.h  ogl.h  ogl_init.h  palette.h  pcx.h  physfsrwops.h  physfsx.h  pstypes.h  rle.h  strio.h  strutil.h  texmap.h  timer.h  u_mem.h  ui.h  vecmat.h
include/editor/: editor.h  texpage.h
libmve/: mve_main.c  mveplay.c
main/: ai.c  ai.h  ai2.c  aipath.c  aistruct.h  automap.c  automap.h  bm.c  bm.h  bmread.c  cntrlcen.c  cntrlcen.h  collide.c  config.c  config.h  console.c  controls.c  controls.h  credits.c  digi.h  digiobj.c  dumpmine.c  effects.c  effects.h  endlevel.c  escort.c  escort.h  fireball.c  fireball.h  fuelcen.c  fuelcen.h  fvi.c  fvi.h  game.c  game.h  gamecntl.c  gamefont.c  gamefont.h  gamemine.c  gamemine.h  (+81 more)
main/editor/: med.c
maths/: fixc.c  rand.c  tables.c  tables.inc  vecmat.c
mem/: mem.c
misc/: args.c  cfile.c  error.c  hash.c  hmp.c  hmp2mid.c  parsarg.c  strio.c  strutil.c
ui/: button.c  checkbox.c  dialog.c  file.c  gadget.c  icon.c  inputbox.c  keypad.c  keytrap.c  menubar.c  message.c  mouse.c  popup.c  radio.c  scroll.c  ui.c  window.c
